--- a/.env
+++ b/.env
@@ -5,7 +5,9 @@ DB_HOST=127.0.0.1
 DB_ON=false
 
 PLATONUS_URL=http://platon.kafu.kz/
+
 MOODLE_URL=https://test.racer-cr.ru/
+MOODLE_TOKEN=2e6b2adc7f7ad1a56d38ee307d00427e
 
 DEBUG=true
 
