--- a/.env
+++ b/.env
@@ -9,6 +9,8 @@ PLATONUS_URL=http://platon.kafu.kz/
 MOODLE_URL=https://test.racer-cr.ru/
 MOODLE_TOKEN=2e6b2adc7f7ad1a56d38ee307d00427e
 
+KAFU_NEWS=https://kafu.edu.kz/news/page/
+
 DEBUG=true
 
 TIME_DELAY=21600
